--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "eslint-plugin-import": "^2.23.3",
         "eslint-plugin-prettier": "^3.4.0",
         "eslint-webpack-plugin": "^3.2.0",
+        "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.2.0",
         "mini-css-extract-plugin": "^2.7.2",
         "node-sass": "^8.0.0",
