--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "devDependencies": {
         "@babel/core": "^7.20.5",
         "@babel/preset-env": "^7.20.2",
+        "@types/copy-webpack-plugin": "^10.1.0",
         "@typescript-eslint/eslint-plugin": "^5.46.0",
         "@typescript-eslint/parser": "^5.46.0",
         "babel-loader": "^9.1.0",
@@ -33,7 +34,7 @@
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.2.0",
         "mini-css-extract-plugin": "^2.7.2",
-        "node-sass": "^8.0.0",
+        "node-sass": "4.14.1",
         "postcss-loader": "^7.0.2",
         "postcss-preset-env": "^7.8.3",
         "prettier": "2.2.1",
@@ -41,6 +42,7 @@
         "style-loader": "^2.0.0",
         "ts-loader": "^9.4.2",
         "typescript": "^4.9.4",
+        "url-loader": "^4.1.1",
         "webpack": "^5.75.0",
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^3.11.3",
